--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Monster Hunter API</title>
+    <title>Monster Hunter World API</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
-    <!-- Modal -->
+    <!-- Image Modal -->
     <div class="modal-container" id="modal-container">
         <div class="modal-container__toggle">
             <i class="modal-container__toggle--icon fas fa-times" aria-hidden="true"></i>
         </div>
-        
         <div class="modal-container__content">
             <img class="modal-container__img" id="modal-img">
         </div>
     </div>
 
     <h1 class="primary-heading">Monster Hunter World API</h1>
-    <div class="selection">
-        <select name="Monster List" class="selection__list" id="monster-value"></select>
-        <a href="#" class="selection__btn" id="submit-monster">Search Monster</a>
-        <a href="#" class="selection__btn" id="random-monster">Random Monster</a>
+
+    <!-- Options to retrieve Monster data -->
+    <div class="options">
+        <select name="Monster List" class="options__list" id="monster-value">
+            <option disabled selected>Select a Monster...</option>
+        </select>
+        <a href="#" class="options__btn" id="random-monster">Random Monster</a>
     </div>
 
-
+    <!-- Monster data displays here -->
     <div class="monster" id="monster-container"></div>
 
     <footer class="footer">
-        <p class="footer__text">
-            &copy; 2019 Designed & Developed by 
-            <a href="#" class="footer__text-link">Jose Torralba</a>
+        <p class="footer__text">&copy; 2019 Designed & Developed by <a href="#" class="footer__text-link">Jose Torralba</a>
         </p>
     </footer>
     <script src="js/app.js"></script>
