--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Monster Field Guide for Monster Hunter World Iceborne.">
     <title>Monster Hunter World API</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    
 </head>
 <body>
-    <!-- Image Modal -->
+    <!-- Modal for Monster/Locale Image/Render -->
     <div class="modal-container" id="modal-container">
-
         <div class="modal-container__content">
             <div class="modal-container__toggle">
                 <i class="modal-container__toggle--icon fas fa-times" aria-hidden="true"></i>
@@ -22,31 +21,46 @@
         </div>
     </div>
 
-    <h1 class="primary-heading">Monster Hunter World API</h1>
-        
+    <!-- Header -->
+    <div class="loading"></div>
+    <header class="header">
+        <div class="header__content">
+            <h1 class="primary-heading">
+                <span class="primary-heading--main">Monster Hunter World</span>
+                <span class="primary-heading--sub">Iceborne API</span>
+            </h1>
+            <div class="header__options">
+                <input class="header__options--input" type="text" placeholder="Search a Monster...">
+                <select class="header__options--select" name="Monster List">
+                    <option disabled selected>Select a Monster...</option>
+                </select>
+                <button class="header__options--button">Random Monster</button>
+            </div>
+        </div>
+    </header>
 
-    <!-- Options to retrieve Monster data -->
-    <div class="options">
-        <select name="Monster List" class="options__monster-list">
-            <option disabled selected>Select a Monster...</option>
-        </select>
-        <a href="#" class="options__monster-btn">Random Monster</a>
-    </div>
+    <!-- Monster Section -->
+    <section class="section-monster" id="section-monster">
+        <div class="monster"></div>
+    </section>
 
+    <!-- Locale Section -->
+    <section class="section-locales">
+        <div class="locales"></div>
+    </section>
 
-    <!-- Monster data displays here -->
-    <div class="monster">
-        <p class="instructions">You can also choose a Monster icon below if it catches your interest.</p>
-    </div>
-
-    <!-- Monster Icon data displays here -->
-    <div class="monster__icons"></div>
-
+    <!-- Footer -->
     <footer class="footer">
+        <p class="footer__text">
+            Monster Hunter World Images by
+            <a href="https://www.capcom.com/" target="_blank" class="footer__text-link">Capcom</a>
+        </p>
+
         <p class="footer__text">&copy; 2020 Designed & Developed by 
             <a href="http://torralbajose.com/" target="_blank" class="footer__text-link">Jose Torralba</a>
         </p>
-    </footer>
+    </footer> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
