--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Monster Field Guide for Monster Hunter World Iceborne.">
-    <title>Monster Hunter World API</title>
+    <title>Monster Hunter Field Guide</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -27,7 +27,7 @@
         <div class="header__content">
             <h1 class="primary-heading">
                 <span class="primary-heading--main">Monster Hunter World</span>
-                <span class="primary-heading--sub">Iceborne API</span>
+                <span class="primary-heading--sub">Field Guide</span>
             </h1>
             <div class="header__options">
                 <input class="header__options--input" type="text" placeholder="Search a Monster...">
