--- a/index.html
+++ b/index.html
@@ -5,24 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Monster Field Guide for Monster Hunter World Iceborne.">
-    <title>Monster Hunter Field Guide</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <script defer src="js/app.js"></script>
+    <title>Monster Hunter Field Guide</title>
 </head>
 <body>
-    <!-- Modal for Monster/Locale Image/Render -->
-    <div class="modal-container" id="modal-container">
-        <div class="modal-container__content">
-            <div class="modal-container__toggle">
-                <i class="modal-container__toggle--icon fas fa-times" aria-hidden="true"></i>
-            </div>
-            <img class="modal-container__img" id="modal-img">
-        </div>
-    </div>
+    <!-- Modal -->
+    <div class="modal"></div>
 
     <!-- Header -->
-    <div class="loading"></div>
     <header class="header">
         <div class="header__content">
             <h1 class="primary-heading">
@@ -39,28 +31,19 @@
         </div>
     </header>
 
-    <!-- Monster Section -->
-    <section class="section-monster" id="section-monster">
-        <div class="monster"></div>
-    </section>
-
-    <!-- Locale Section -->
-    <section class="section-locales">
-        <div class="locales"></div>
-    </section>
+    <!-- Monster & Locale Sections -->
+    <section class="section-monster"></section>
+    <section class="section-locales"></section>
 
     <!-- Footer -->
     <footer class="footer">
-        <p class="footer__text">
-            Monster Hunter World Images by
+        <p class="footer__text">Monster Hunter World Images by
             <a href="https://www.capcom.com/" target="_blank" class="footer__text-link">Capcom</a>
         </p>
-
-        <p class="footer__text">&copy; 2020 Designed & Developed by 
+        <p class="footer__text">&copy; 2021 Designed & Developed by 
             <a href="http://torralbajose.com/" target="_blank" class="footer__text-link">Jose Torralba</a>
         </p>
     </footer> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/app.js"></script>
 </body>
 </html>
